[gd_scene load_steps=4 format=3 uid="uid://title001"]

[ext_resource type="Script" path="res://scripts/title/title.gd" id="1"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 56
font_color = Color(0.2, 0.2, 0.28, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sub"]
font_size = 24
font_color = Color(0.45, 0.43, 0.5, 1)

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.95, 0.93, 0.88, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "MODERN ART"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Online Card Game"
label_settings = SubResource("LabelSettings_sub")
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)

[node name="PlayButton" type="Button" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 70)
theme_override_font_sizes/font_size = 28
text = "PLAY"

[node name="LangButton" type="Button" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 55)
theme_override_font_sizes/font_size = 20
text = "Language / 言語"

[node name="ConnectionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -30.0
offset_right = -10.0
horizontal_alignment = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.5, 0.48, 0.45, 1)
